# morose

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: btrie.rs  lib.rs  lookup.rs  main.rs
